Add user activation workflow
